# sola-solo

./: .cursorrules  .editorconfig  .env.example  .gitignore  AUTONOMOUS_OPERATION.md  BINARY_ARCHITECTURE_AUDIT.md  CLEANUP_SUMMARY.md  CONSUMER_DEPLOYMENT_READY.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_INDEX.md  ENV_UPDATE_SUMMARY.md  EVOLUTION_LOG.md  GOVERNANCE_SUMMARY.md  HELP_QUICK_REFERENCE.md  Justfile  PHASE_22_23_24_COMPLETE.md  PHASE_25_COMPLETE.md  PHASE_30_BUILD_NOTES.md  PHASE_30_INTEGRATION_TESTS.md  PROACTIVE_FRONTEND_COMPLETE.md  PROJECT_ORGANIZATION.md  README.md  RELEASE_NOTES.md  RELEASE_v1.0.1.md  RELEASE_v1.0.1_GITHUB.md  REPORTING_AGENT_INTEGRATION.md  REPORTING_AGENT_TESTS.md  REPOSITORY_STRUCTURE.md  RESEARCH_LOG.md  SECURITY.md  SETUP.md  TRAINING_CURRICULUM.md  installer.iss  permissions.json  release-v1.0.0.ps1  release-v1.0.0.sh
.github/: FILE_PLACEMENT_RULES.md  GITHUB_ACTIONS_SETUP.md  SECURITY_CHECKLIST.md
affection_switches/: Cargo.toml
agent_spawner/: Cargo.toml
agent_spawner/src/: lib.rs
asi_wallet_identity/: Cargo.toml
audio_intelligence/: Cargo.toml
audio_intelligence/src/: lib.rs
autonomous_evolution_loop/: Cargo.toml
autonomous_evolution_loop/src/: lib.rs
browser_orch_ext/: Cargo.toml  driver.js  main.js  package-lock.json  package.json
browser_orch_ext/src/: lib.rs
browser_orch_ext/src/orchestrator/: cdp.rs  chromium_process.rs  driver.rs  get_state.js  mod.rs
caos/: Cargo.toml
cerebrum_nexus/: Cargo.toml
cerebrum_nexus/src/: fantasy_dyad.rs  hive.rs  learning_pipeline.rs  lib.rs  psychological_mapping.rs  reasoning.rs  tool_agent.rs
code_analysis/: Cargo.toml
code_analysis/src/: lib.rs  master_orchestrator.rs
common_types/: Cargo.toml
config_manager/: Cargo.toml
config_manager/src/: lib.rs
context_correlation_engine/: Cargo.toml
context_correlation_engine/src/: lib.rs
context_engine/: Cargo.toml
curiosity_engine/: Cargo.toml
data/: horoscope_config.json  visual_archetype_profiles.json  zodiac_prompt_matrix.json
desktop_capture_service/: Cargo.toml
desktop_capture_service/src/: lib.rs
digital_twin/: .gitignore  Cargo.toml
digital_twin/src/: lib.rs
docs/: AFFECTION_SWITCHES_DESIGN.md  AGENTIC_AI_DESKTOP_SOLUTION.md  ARCHETYPE_MATCHER_DATING_PROFILE_PROMPT.md  ARCHETYPE_PROFILE_PICTURE_PROMPTS.md  BACKEND_ARCHITECTURE.md  BROWSER_CAPABILITIES_ARCHITECTURE.md  BROWSER_CONTROL_INTEGRATION.md  BROWSER_CONTROL_TESTING.md  BUILD.md  CAPTCHA_SOLVING_INTEGRATION.md  CONSUMER_READY_CONFIG.md  CONTEXT_ENGINEERING_ARCHITECTURE.md  DATABASE_SOLUTIONS_ARCHITECTURE.md  DUAL_BRAIN_ORCHESTRATION_AUDIT.md  FOLDER_BASED_SKILLS.md  FRONTEND_API_CONNECTIONS.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  FRONTEND_LLM_INTEGRATION_GUIDE.md  FRONTEND_SETTINGS_GUIDE.md  FRONTEND_TUI_FEATURE_STUB.md  FRONTEND_UI.md  FRONTEND_UI_ARCHITECTURE.md  FRONTEND_UI_CODING_INSTRUCTIONS.md  FRONTEND_UI_IMPLEMENTATION_PLAN.md  FULL_CONTROL_ACCESS_ARCHITECTURE.md  GIRLFRIEND_FRAMEWORK_ARCHITECTURE.md  GOOGLE_AI_STUDIO_FRONTEND_PROMPT.md  GOOGLE_AI_STUDIO_INSTRUCTIONS.md  GOOGLE_AI_STUDIO_PROMPT.md  HIDDEN_SWARM_COORDINATION.md  HOME_AUTOMATION_INTEGRATION.md  IDENTITY_PERSISTENCE.md  INTEGRATION_QUICK_START.md  LAYERED_KNOWLEDGE_BASE_ARCHITECTURE.md  LAYERED_MEMORY_ARCHITECTURE.md  LLM_SOLUTION_ARCHITECTURE.md  MALWARE_SANDBOX_INTEGRATION.md  MASTER_ORCHESTRATION_ARCHITECTURE.md  MULTIMEDIA_NETWORK_INTELLIGENCE_ADDENDUM.md  MULTI_MODAL_ARCHITECTURE.md  (+31 more)
dream_healing/: Cargo.toml
dream_recording/: Cargo.toml
dream_recording/src/: lib.rs
ecosystem_manager/: Cargo.toml
ecosystem_manager/src/: lib.rs
email_orch/: Cargo.toml
email_orch/src/: lib.rs
emotion_detection/: Cargo.toml
emotion_detection/src/: lib.rs
emotional_intelligence_core/: Cargo.toml
error_types/: Cargo.toml
error_types/src/: lib.rs
ethical_agent/: Cargo.toml
evolution_pipeline/: Cargo.toml
evolution_pipeline/src/: git_operations.rs  github_api.rs  github_enforcement.rs  lib.rs
evolutionary_helix_core/: Cargo.toml
frontend_desktop/: .gitignore  App.tsx  CONFIGURATION_REVIEW.md  INTEGRATION.md  README.md  env.ts  index.css  index.html  interfaces.ts  metadata.json  package-lock.json  package.json  tsconfig.json  types.ts  vite-env.d.ts  vite.config.ts
frontend_mobile/: package-lock.json  package.json  tsconfig.json  vite.config.ts
github_archetype_sync/: Cargo.toml
github_archetype_sync/src/: lib.rs
home_automation_bridge/: Cargo.toml
home_automation_bridge/src/: lib.rs
home_automation_bridge/src/agents/: agi_interface.rs  mod.rs
home_automation_bridge/src/devices/: alexa.rs  hue.rs  mod.rs  traits.rs
home_automation_bridge/src/models/: commands.rs  mod.rs
hyperspace_cache/: Cargo.toml
hyperspace_cache/src/: lib.rs
integration-social-rs/: Cargo.toml
integration-social-rs/src/: lib.rs
intimate_girlfriend_module/: Cargo.toml
intimate_girlfriend_module/src/: lib.rs
llm_orchestrator/: Cargo.toml
llm_orchestrator/src/: lib.rs
multi_modal_input/: Cargo.toml
multi_modal_input/src/: lib.rs
multi_modal_recording/: Cargo.toml
multi_modal_recording/src/: lib.rs
network_security_agent/: Cargo.toml
network_security_agent/src/: exploit.rs  kali_tools.rs  lib.rs  mitre_attack.rs  playbooks.rs  scanner.rs  vulnerability.rs
outlook_com/: Cargo.toml
outlook_com/src/: lib.rs  stub_impl.rs  windows_impl.rs
pagi-twin/: Cargo.toml
pagi-twin/src/: main.rs
pagi-utils/: Cargo.toml
phoenix-web/: Cargo.toml
phoenix-web/data/vector_db/vector_kb.sled/: db
phoenix-web/src/: agent_tools_api.rs  analytics.rs  code_evolution.rs  counselor_api.rs  env_sensor.rs  export.rs  ghost_engine.rs  google.rs  handlers.rs  internal_bus.rs  interventions.rs  lib.rs  main.rs  mission_control.rs  narrative_auditor.rs  pairing.rs  proactive.rs  professional_agents.rs  profile_generator.rs  readiness.rs  reporting_handler.rs  resonance.rs  swarm_delegation.rs  system_info.rs  trust_api.rs  websocket.rs
phoenix-web/src/tools/: filesystem.rs  mod.rs  web_search.rs
phoenix_identity/: Cargo.toml
phoenix_identity/src/: lib.rs
(+420 files in other folders)
