[workspace]
resolver = "2"
members = [
    "common_types",
    "intimate_girlfriend_module",
    "cerebrum_nexus",
    "digital_twin",
    "self_critic",
    "lucid_dreaming",
    "shared_dreaming",
    "dream_recording",
    "dream_healing",
    "multi_modal_perception",
    "multi_modal_recording",
    "multi_modal_input",
    "emotion_detection",
    "vision_advanced",
    "context_engine",
    "emotional_intelligence_core",
    "curiosity_engine",
    "self_preservation_instinct",
    "asi_wallet_identity",
    "autonomous_evolution_loop",
    "neural_cortex_strata",
    "vital_organ_vaults",
    "evolutionary_helix_core",
    "synaptic_tuning_fibers",
    "nervous_pathway_network",
    "vascular_integrity_system",
    "vital_pulse_monitor",
    "vital_pulse_collector",
    "limb_extension_grafts",
    "llm_orchestrator",
    "synaptic_pulse_distributor",
    "agent_spawner",
    "evolution_pipeline",
    "testing_framework",
    "caos",
    "hyperspace_cache",
    "user_identity",
    "phoenix_identity",
    "phoenix-web",
    "transcendence_archetypes",
    "extensions/relationship_dynamics",
    "voice_io",
    "email_orch",
    "skill_system",
    "affection_switches",
    "system_access",
    "ethical_agent",
    "browser_orch_ext",
    "integration-social-rs",
    "service-orchestrator-rs",
    "tools/process_tool",
    "error_types",
    "config_manager",
    "github_archetype_sync",
    "code_analysis",
    "vector_kb",
    "ecosystem_manager",
    "outlook_com",
    "audio_intelligence",
    "desktop_capture_service",
    "wireless_sniffer",
    "context_correlation_engine",
    "privacy_framework",
    "hardware_detector",
    "home_automation_bridge",
    "horoscope_archetypes",
]
exclude = [
    "phoenix-desktop-tauri/src-tauri",
]
