[package]
name = "context_correlation_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
anyhow = "1.0"

# Memory integration
neural_cortex_strata = { path = "../neural_cortex_strata" }
audio_intelligence = { path = "../audio_intelligence" }
desktop_capture_service = { path = "../desktop_capture_service" }
