[package]
name = "desktop_capture_service"
version = "0.1.0"
edition = "2021"

[features]
default = []

# Enable screen capture
# capture = ["dep:screenshots"]

# Enable OCR
# ocr = ["dep:tesseract-rs"]

# Enable image processing
# imageproc = ["dep:imageproc", "dep:image"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
anyhow = "1.0"

# Screen capture (optional)
# Note: screenshots crate version may vary - add when implementing
# screenshots = { version = "0.6", optional = true }

# OCR (optional)
# Note: tesseract-rs has dependency conflicts - add when implementing
# tesseract-rs = { version = "0.1", optional = true }

# Image processing (optional)
# Note: Add when implementing blurring features
# imageproc = { version = "0.24", optional = true }
# image = { version = "0.25", optional = true }

# Memory integration
vital_organ_vaults = { path = "../vital_organ_vaults" }
neural_cortex_strata = { path = "../neural_cortex_strata" }
