[package]
name = "dream_recording"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
vital_organ_vaults = { path = "../vital_organ_vaults" }

