[package]
name = "ecosystem_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
sled = "0.34"
tracing = "0.1"
