[package]
name = "email_orch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }

# SMTP
lettre = { version = "0.11", default-features = false, features = [
  "builder",
  "hostname",
  "smtp-transport",
  "tokio1",
  "tokio1-native-tls",
] }

# IMAP (blocking) + TLS
imap = "3.0.0-alpha.15"
native-tls = "0.2"

# Message parsing
mailparse = "0.14"

# LLM reflection for desire-driven action planning
llm_orchestrator = { path = "../llm_orchestrator" }

