[package]
name = "error_types"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
full = ["reqwest", "serde_json"]
