[package]
name = "github_archetype_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
error_types = { path = "../error_types" }
config_manager = { path = "../config_manager" }
