[package]
name = "home_automation_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
tracing = "0.1"

# Optional: MQTT support for IoT devices
# mqtt = { version = "0.5", optional = true }

# Memory integration
vital_organ_vaults = { path = "../vital_organ_vaults" }
neural_cortex_strata = { path = "../neural_cortex_strata" }

# UUID generation
uuid = { version = "1", features = ["v4"] }

[features]
default = []
# mqtt = ["dep:mqtt"]
