[package]
name = "hyperspace_cache"
version = "0.1.0"
edition = "2021"

[features]
# Default to an all-Rust, embedded backend for easy builds on Windows.
default = ["sled-backend"]
sled-backend = ["dep:sled"]
rocksdb-backend = ["dep:rocksdb"]

[dependencies]
sled = { version = "0.34", optional = true }
rocksdb = { version = "0.22", optional = true }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
