
[package]
name = "integration-social-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-cron-scheduler = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
backoff = "0.4"
async-trait = "0.1"
anyhow = "1.0"

# Platform SDKs
# tiktok-api = { version = "0.5", optional = true }
# instagram-graph = { version = "0.4", optional = true }
# twitter-api-v2 = { version = "0.29", optional = true }
# facebook-graph = { version = "0.3", optional = true }
# linkedin-api = { version = "0.2", optional = true }
# google-youtube3 = { version = "5.0", optional = true }
# yup-oauth2 = { version = "8.0", optional = true }
# ring = { version = "0.17", optional = true }

[features]
default = []
# tiktok = ["tiktok-api"]
# instagram = ["instagram-graph"]
# x = ["twitter-api-v2"]
# facebook = ["facebook-graph"]
# linkedin = ["linkedin-api"]
youtube = []  # Feature flag for YouTube connector (dependencies commented out)
# security = ["ring"]
