[package]
name = "intimate_girlfriend_module"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
dotenvy = "0.15"
emotional_intelligence_core = { path = "../emotional_intelligence_core" }
vital_organ_vaults = { path = "../vital_organ_vaults" }

