[package]
name = "outlook_com"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"

[target.'cfg(not(windows))'.dependencies]
# Stub dependencies for non-Windows platforms
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
