[package]
name = "phoenix_identity"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde", "clock"] }
serde_json = "1.0"
common_types = { path = "../common_types" }
rand = "0.8"
transcendence_archetypes = { path = "../transcendence_archetypes" }
intimate_girlfriend_module = { path = "../intimate_girlfriend_module" }
horoscope_archetypes = { path = "../horoscope_archetypes" }
relationship_dynamics = { path = "../extensions/relationship_dynamics" }

